docs/1.3/_sources/api/gammapy.modeling.models.GaussianSpatialModel.rst.txt
GaussianSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianSpatialModel.covariance
      ~GaussianSpatialModel.default_parameters
      ~GaussianSpatialModel.e
      ~GaussianSpatialModel.evaluation_bin_size_min
      ~GaussianSpatialModel.evaluation_radius
      ~GaussianSpatialModel.evaluation_region
      ~GaussianSpatialModel.frozen
      ~GaussianSpatialModel.is_energy_dependent
      ~GaussianSpatialModel.lat_0
      ~GaussianSpatialModel.lon_0
      ~GaussianSpatialModel.parameters
      ~GaussianSpatialModel.parameters_unique_names
      ~GaussianSpatialModel.phi
      ~GaussianSpatialModel.phi_0
      ~GaussianSpatialModel.position
      ~GaussianSpatialModel.position_error
      ~GaussianSpatialModel.position_lonlat
      ~GaussianSpatialModel.sigma
      ~GaussianSpatialModel.tag
      ~GaussianSpatialModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianSpatialModel.__call__
      ~GaussianSpatialModel.copy
      ~GaussianSpatialModel.evaluate
      ~GaussianSpatialModel.evaluate_geom
      ~GaussianSpatialModel.freeze
      ~GaussianSpatialModel.from_dict
      ~GaussianSpatialModel.from_parameters
      ~GaussianSpatialModel.from_position
      ~GaussianSpatialModel.integrate_geom
      ~GaussianSpatialModel.plot
      ~GaussianSpatialModel.plot_error
      ~GaussianSpatialModel.plot_grid
      ~GaussianSpatialModel.plot_interactive
      ~GaussianSpatialModel.plot_position_error
      ~GaussianSpatialModel.reassign
      ~GaussianSpatialModel.to_dict
      ~GaussianSpatialModel.to_region
      ~GaussianSpatialModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e
   .. autoattribute:: evaluation_bin_size_min
   .. autoattribute:: evaluation_radius
   .. autoattribute:: evaluation_region
   .. autoattribute:: frozen
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: parameters_unique_names
   .. autoattribute:: phi
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: position_lonlat
   .. autoattribute:: sigma
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: from_position
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: plot_position_error
   .. automethod:: reassign
   .. automethod:: to_dict
   .. automethod:: to_region
   .. automethod:: unfreeze
